--- a/style01.css
+++ b/style01.css
@@ -1,8 +1,4 @@
-.header-img{
-    width: 50px;
-    height: 50px;
-}
-.header-item{
-    float: left;
-    list-style: none;
+
+nav div ul li {
+    font-size: 20px;
 }
